v9.0 - proper root implementation